2001-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* procs.h (SCM_CLOSURE_FORMALS):  New macro.

	* debug.c (scm_procedure_source), eval.c (scm_badformalsp,
	SCM_CEVAL, SCM_APPLY), goops.c (get_slot_value, set_slot_value),
	procprop.c (scm_i_procedure_arity), sort.c (closureless):  Use 
	SCM_CLOSURE_FORMALS.

	* eval.c (scm_badformalsp, SCM_CEVAL), procprop.c
	(scm_i_procedure_arity):  Prefer stronger predicates like
	SCM_NULLP or SCM_FALSEP over SCM_IMP.

	* macros.c (macro_print):  Extracted macro printing code from
	print.c and simplified it.

	(scm_macro_type):  Use SCM_MACRO_TYPE;

	(scm_init_macros):  Use macro_print for printing macros.

	* print.c (scm_print_opts):  Improved option documentation.

	(scm_iprin1):  Extracted printing of macros to macros.c.
	Simplified printing of ordinary closures.

	* procs.c (scm_thunk_p):  Fixed handling of closures.  Thanks to
	Martin Grabmueller for the bug report.

2001-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	This patch eliminates some further applications of SCM_C[AD]R to
	non pair cells.

	* gc.h (SCM_SETAND_CAR, SCM_SETOR_CAR):  Deprecated.  These have
	never been applied to real pairs.

	* srcprop.h (SCM_SOURCE_PROPERTY_FLAG_BREAK):  Added.

	(SRCPROPBRK):  Use SCM_SOURCE_PROPERTY_FLAG_BREAK.

	* unif.h (SCM_ARRAY_CONTIGUOUS, SCM_ARRAY_FLAG_CONTIGUOUS,
	SCM_ARRAY_CONTP):  Renamed SCM_ARRAY_CONTIGUOUS to
	SCM_ARRAY_FLAG_CONTIGUOUS and use it.

	(SCM_SET_ARRAY_CONTIGUOUS_FLAG, SCM_CLR_ARRAY_CONTIGUOUS_FLAG):
	Added.

	* srcprop.h (SRCPROPH), unif.h (UNIFH):  Renamed to
	SCM_SOURCE_PROPERTIES_H and SCM_UNIFORM_VECTORS_H, respectively.

	* srcprop.h (SETSRCPROPBRK, CLEARSRCPROPBRK), unif.c
	(scm_dimensions_to_uniform_array, scm_ra_set_contp):  Don't use
	SCM_SET{AND,OR}_CAR.

2001-04-17  Gary Houston  <ghouston@arglist.com>

	* some initial support for IPv6:
	
	* socket.c (scm_fill_sockaddr): improve the argument validation.
	don't allocate memory until all args are checked.  instead of